// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModOptionsValues renders blueprint options with additional props 1`] = `
<DocumentFragment>
  <div
    class="pt-3 container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <form
          class=""
          novalidate=""
        >
          <div
            class="card"
          >
            <div
              class="card-header"
            >
              Mod Input Options
            </div>
            <div
              class="card-body"
            >
              <div
                class="formGroup form-group row"
              >
                <div
                  class="mb-2 collapse col-12"
                >
                  <div
                    class="annotationPlaceholder"
                  />
                </div>
                <label
                  class="label form-label col-form-label col-xl-2 col-lg-3"
                  for="additionalProperties"
                >
                  Additional Properties
                </label>
                <div
                  class="col-xl-10 col-lg-9"
                >
                  <div
                    class="root"
                  >
                    <div
                      class="field"
                    >
                      <input
                        class="form-control"
                        id="additionalProperties"
                        name="additionalProperties"
                        readonly=""
                        value=""
                      />
                    </div>
                    <div
                      class="dropdown dropdown"
                      data-test-selected="Exclude"
                      data-testid="toggle-additionalProperties"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="true"
                        class="dropdown-toggle btn btn-link"
                        type="button"
                      >
                        <span
                          class="symbol"
                        >
                          <test-file-stub
                            classname="root"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ModOptionsValues renders empty options 1`] = `
<DocumentFragment>
  <div
    class="pt-3 container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <form
          class=""
          novalidate=""
        >
          <div
            class="card"
          >
            <div
              class="card-header"
            >
              Mod Input Options
            </div>
            <div
              class="card-body"
            >
              <div>
                This mod does not require any configuration
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ModOptionsValues renders mod options 1`] = `
<DocumentFragment>
  <div
    class="pt-3 container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <form
          class=""
          novalidate=""
        >
          <div
            class="card"
          >
            <div
              class="card-header"
            >
              Mod Input Options
            </div>
            <div
              class="card-body"
            >
              <div
                class="formGroup form-group row"
              >
                <div
                  class="mb-2 collapse col-12"
                >
                  <div
                    class="annotationPlaceholder"
                  />
                </div>
                <label
                  class="label form-label col-form-label col-xl-2 col-lg-3"
                  for="myDatabase"
                >
                  My Database
                </label>
                <div
                  class="col-xl-10 col-lg-9"
                >
                  <div
                    class="root"
                  >
                    <div
                      class="field"
                    >
                      <input
                        class="form-control"
                        id="myDatabase"
                        name="myDatabase"
                        readonly=""
                        value=""
                      />
                    </div>
                    <div
                      class="dropdown dropdown"
                      data-test-selected="Exclude"
                      data-testid="toggle-myDatabase"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="true"
                        class="dropdown-toggle btn btn-link"
                        type="button"
                      >
                        <span
                          class="symbol"
                        >
                          <test-file-stub
                            classname="root"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup form-group row"
              >
                <div
                  class="mb-2 collapse col-12"
                >
                  <div
                    class="annotationPlaceholder"
                  />
                </div>
                <label
                  class="label form-label col-form-label col-xl-2 col-lg-3"
                  for="myBool"
                >
                  My Bool
                </label>
                <div
                  class="col-xl-10 col-lg-9"
                >
                  <div
                    class="root"
                  >
                    <div
                      class="field"
                    >
                      <input
                        class="form-control"
                        id="myBool"
                        name="myBool"
                        readonly=""
                        value=""
                      />
                    </div>
                    <div
                      class="dropdown dropdown"
                      data-test-selected="Exclude"
                      data-testid="toggle-myBool"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="true"
                        class="dropdown-toggle btn btn-link"
                        type="button"
                      >
                        <span
                          class="symbol"
                        >
                          <test-file-stub
                            classname="root"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup form-group row"
              >
                <div
                  class="mb-2 collapse col-12"
                >
                  <div
                    class="annotationPlaceholder"
                  />
                </div>
                <label
                  class="label form-label col-form-label col-xl-2 col-lg-3"
                  for="myNum"
                >
                  My Num
                </label>
                <div
                  class="col-xl-10 col-lg-9"
                >
                  <div
                    class="root"
                  >
                    <div
                      class="field"
                    >
                      <input
                        class="form-control"
                        id="myNum"
                        name="myNum"
                        readonly=""
                        value=""
                      />
                    </div>
                    <div
                      class="dropdown dropdown"
                      data-test-selected="Exclude"
                      data-testid="toggle-myNum"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="true"
                        class="dropdown-toggle btn btn-link"
                        type="button"
                      >
                        <span
                          class="symbol"
                        >
                          <test-file-stub
                            classname="root"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup form-group row"
              >
                <div
                  class="mb-2 collapse col-12"
                >
                  <div
                    class="annotationPlaceholder"
                  />
                </div>
                <label
                  class="label form-label col-form-label col-xl-2 col-lg-3"
                  for="myArray"
                >
                  My Array
                </label>
                <div
                  class="col-xl-10 col-lg-9"
                >
                  <div
                    class="root"
                  >
                    <div
                      class="field"
                    >
                      <input
                        class="form-control"
                        id="myArray"
                        name="myArray"
                        readonly=""
                        value=""
                      />
                    </div>
                    <div
                      class="dropdown dropdown"
                      data-test-selected="Exclude"
                      data-testid="toggle-myArray"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="true"
                        class="dropdown-toggle btn btn-link"
                        type="button"
                      >
                        <span
                          class="symbol"
                        >
                          <test-file-stub
                            classname="root"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup form-group row"
              >
                <div
                  class="mb-2 collapse col-12"
                >
                  <div
                    class="annotationPlaceholder"
                  />
                </div>
                <label
                  class="label form-label col-form-label col-xl-2 col-lg-3"
                  for="myGoogleSheet"
                >
                  My Google Sheet
                </label>
                <div
                  class="col-xl-10 col-lg-9"
                >
                  <div
                    class="root"
                  >
                    <div
                      class="field"
                    >
                      <input
                        class="form-control"
                        id="myGoogleSheet"
                        name="myGoogleSheet"
                        readonly=""
                        value=""
                      />
                    </div>
                    <div
                      class="dropdown dropdown"
                      data-test-selected="Exclude"
                      data-testid="toggle-myGoogleSheet"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="true"
                        class="dropdown-toggle btn btn-link"
                        type="button"
                      >
                        <span
                          class="symbol"
                        >
                          <test-file-stub
                            classname="root"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup form-group row"
              >
                <div
                  class="mb-2 collapse col-12"
                >
                  <div
                    class="annotationPlaceholder"
                  />
                </div>
                <label
                  class="label form-label col-form-label col-xl-2 col-lg-3"
                  for="myObject"
                >
                  My Object
                </label>
                <div
                  class="col-xl-10 col-lg-9"
                >
                  <div
                    class="root"
                  >
                    <div
                      class="field"
                    >
                      <input
                        class="form-control"
                        id="myObject"
                        name="myObject"
                        readonly=""
                        value=""
                      />
                    </div>
                    <div
                      class="dropdown dropdown"
                      data-test-selected="Exclude"
                      data-testid="toggle-myObject"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="true"
                        class="dropdown-toggle btn btn-link"
                        type="button"
                      >
                        <span
                          class="symbol"
                        >
                          <test-file-stub
                            classname="root"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup form-group row"
              >
                <div
                  class="mb-2 collapse col-12"
                >
                  <div
                    class="annotationPlaceholder"
                  />
                </div>
                <label
                  class="label form-label col-form-label col-xl-2 col-lg-3"
                  for="myStr"
                >
                  My Str
                </label>
                <div
                  class="col-xl-10 col-lg-9"
                >
                  <div
                    class="root"
                  >
                    <div
                      class="field"
                    >
                      <input
                        class="form-control"
                        id="myStr"
                        name="myStr"
                        readonly=""
                        value=""
                      />
                    </div>
                    <div
                      class="dropdown dropdown"
                      data-test-selected="Exclude"
                      data-testid="toggle-myStr"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="true"
                        class="dropdown-toggle btn btn-link"
                        type="button"
                      >
                        <span
                          class="symbol"
                        >
                          <test-file-stub
                            classname="root"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
